<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="7" >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_weight="5"
            android:textSize="20sp"
            android:text="@string/txtViewListagemAudiosNomeAudio"
            android:id="@+id/txtViewListagemAudiosNomeAudio_Valor"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"
            android:layout_weight="2"
            android:layout_gravity="center_vertical"
            android:text="@string/txtViewListagemAudiosLatitude"
            android:id="@+id/txtViewListagemAudiosLatitude_Valor"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="7" >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_weight="5"
            android:layout_gravity="center_vertical"
            android:text="@string/txtViewListagemAudiosDataHoraAudio"
            android:id="@+id/txtViewListagemAudiosDataHora_Valor"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"
            android:layout_weight="2"
            android:layout_gravity="center_vertical"
            android:text="@string/txtViewListagemAudiosLongitude"
            android:id="@+id/txtViewListagemAudiosLongitude_Valor"
            />
    </LinearLayout>

</LinearLayout>